[package]
name = "hex-display"
version = "0.3.1"
edition = "2021"
rust-version = "1.56"
authors = ["Jarred Allen <jarredallen73@gmail.com>"]
description = "Display impl for byte slices which provides a hexdump"
repository = "https://github.com/JarredAllen/hex-display"
documentation = "https://docs.rs/crate/hex-display/latest"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["hex", "slice", "no-std"]
categories = ["no-std", "rust-patterns"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[features]
std = ["alloc"]
alloc = []


[lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
single_use_lifetimes = "warn"

[lints.clippy]
# Set the priority to -1 to allow overriding specific lints that we disagree with.
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific lints:

# Restriction lints
unnecessary_self_imports = "warn"
allow_attributes_without_reason = "warn"

# no_std discipline
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
